--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>사진전 갤러리</title>
-
+    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- AOS 라이브러리 불러오기-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="home.css" />
+    <style>
+      .carousel-item img {
+        object-fit: cover;
+        height: 30vh;
+      }
+      /* 테스크탑 (가로 해상도가 992px 보다 큰 화면에 적용)  */
+      @media (min-width: 992px) {
+        .carousel-item img {
+          height: 60vh;
+        }
+      }
+      main {
+        padding-top: 80px;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-white">
+      <nav class="navbar navbar-expand-lg bg-white fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <i style="color: rgb(133, 118, 118); font-size: 30pt"
@@ -62,10 +79,105 @@
     </header>
     <!-- 헤더끝 -->
     <main>
-      <div id="gallery" class="gallery mb-3">
-        <!-- 사진들은 JavaScript로 동적 생성 -->
+      <div class="container-fluid mb-3">
+        <div
+          id="carouselExampleAutoplaying"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <!-- data-bs-ride="carousel"자동 재생 캐러셀 -->
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner hero">
+            <div class="carousel-item active">
+              <img src="img/IMG_1251.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/3472370031795864613_20211122191556174.JPG"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/3472404906186001444_20231020012315267.JPG"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- 캐러셀 끝 -->
+
+      <div class="container-fluid text-start mb-3 ps-2">
+        <div
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000"
+        >
+          <!-- 내용 ... -->
+          <div class="text-wrap text-dark fs-1 mb-2 ps-2">
+            마준범 사진개인전
+          </div>
+          <p class="fs-6 ps-2 mb-3">이것저것 맘대로 찍은것들</p>
+          <h3 class="ps-2 mb-3">전시 소개</h3>
+          <p class="fs-6 ps-2 mb-3">
+            이번 전시는 자연의 경이로움을 포착한 작품들로 구성되었습니다. 각
+            사진마다 숨겨진 이야기와 감성을 느껴보세요.
+          </p>
+          <!-- 전시 일정 및 정보 -->
+          <h3 class="ps-2 mb-3">전시 일정</h3>
+          <p class="fs-6 ps-2 mb-3">
+            📅 2025년 3월 11일 - 3월 12일 (온라인 전시)
+          </p>
+          <!-- <p class="fs-6">
+            📍 특별한 이벤트와 함께하는 라이브 토크 세션도 준비되어 있습니다!
+          </p> -->
+        </div>
       </div>
     </main>
+
     <!-- footer -->
     <div class="container">
       <footer
@@ -136,100 +248,15 @@
         </ul>
       </footer>
     </div>
-    <!-- 라이트박스 -->
-    <div id="lightbox">
-      <span id="close-lightbox">&times;</span>
-      <img id="lightbox-img" src="" alt="확대 이미지" />
-    </div>
-
-    <script>
-      // 사진 데이터
-      const photos = [
-        {
-          src: "img/jeju/jeju1.jpeg",
-        },
-        {
-          src: "img/jeju/jeju2.jpeg",
-        },
-        {
-          src: "img/jeju/jeju3.jpeg",
-        },
-        {
-          src: "img/jeju/jeju4.jpeg",
-        },
-        {
-          src: "img/jeju/jeju5.jpeg",
-        },
-        {
-          src: "img/jeju/jeju6.jpeg",
-        },
-        {
-          src: "img/jeju/jeju7.jpeg",
-        },
-        {
-          src: "img/jeju/jeju8.jpeg",
-        },
-        {
-          src: "img/jeju/jeju9.jpeg",
-        },
-        {
-          src: "img/jeju/jeju10.jpeg",
-        },
-        {
-          src: "img/jeju/jeju11.jpeg",
-        },
-        {
-          src: "img/jeju/jeju12.jpeg",
-        },
-      ];
-
-      // 갤러리 생성 함수
-      function createGallery() {
-        const galleryElement = document.getElementById("gallery");
-
-        photos.forEach((photo) => {
-          const photoItem = document.createElement("div");
-          photoItem.classList.add("photo-item");
-
-          const img = document.createElement("img");
-          img.src = photo.src;
-
-          photoItem.appendChild(img);
-
-          // 라이트박스 기능 추가
-          photoItem.addEventListener("click", () => openLightbox(photo.src));
-
-          galleryElement.appendChild(photoItem);
-        });
-      }
-
-      // 라이트박스 열기 함수
-      function openLightbox(src) {
-        const lightbox = document.getElementById("lightbox");
-        const lightboxImg = document.getElementById("lightbox-img");
-
-        lightboxImg.src = src;
-        lightbox.style.display = "flex";
-      }
-
-      // 라이트박스 닫기 함수
-      function closeLightbox() {
-        const lightbox = document.getElementById("lightbox");
-        lightbox.style.display = "none";
-      }
-
-      // 이벤트 리스너 설정
-      document
-        .getElementById("close-lightbox")
-        .addEventListener("click", closeLightbox);
-
-      // 페이지 로드 시 갤러리 생성
-      window.addEventListener("load", createGallery);
-    </script>
+    <!-- 스크립트 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- AOS 스크립트 시작 -->
+    <script>
+      AOS.init(); // 자바스크립트로 init()을 해야 동작한다.
+    </script>
   </body>
 </html>
