--- a/osaka.html
+++ b/osaka.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="mobileIndex.html">
+          <a class="navbar-brand" href="index.html">
             <i style="color: rgb(133, 118, 118); font-size: 30pt"
               >MaJunbeom Photo</i
             >
@@ -36,10 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="mobileIndex.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
